# pairreader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  README.md  app.py  chainlit.md  compose.yml  pyproject.toml
.github/workflows/: ci-dev.yml  ci-main.yml  ci.yml
src/pairreader/: __main__.py  agents.py  clmemory.py  discovery_nodes.py  docparser.py  nodes.py  pairreader_nodes.py  prompts_msgs.py  qa_nodes.py  schemas.py  utils.py  vectorestore.py
tests/: __init__.py  conftest.py  test_docparser.py  test_nodes.py  test_schemas.py  test_utils.py  test_vectorstore.py
tests/fixtures/: __init__.py
