[project]
name = "pairreader"
version = "0.1.2"
description = "Your pair reader through your books, presentations, notes and more"
readme = "README.md"
authors = [
    { name = "soufianesys710", email = "soufianenidam7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.8.0",
    "chromadb>=1.0.21",
    "docling>=2.52.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
]

[project.scripts]
pairreader = "pairreader:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
